--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 @import './colors';
+
+html,
+body {
+    background: linear-gradient(to bottom right, $sushi, $gossip);
+    height: 100%;
+    overflow: hidden;
+    padding-top: 10px
+}
+
+* {
+    color: $lilac;
+    font-weight: bolder;    
+    font-size: 20px;
+}
