--- a/src/app/dishes/dishes.html
+++ b/src/app/dishes/dishes.html
@@ -1,4 +1,4 @@
 <div class="dishes breakfasts">
     <h3>Aamupalat</h3>
-    <div class="dish" *ngFor="let dish of breakfasts">{{dish}}</div>
+    <div class="dish" *ngFor="let dish of breakfasts" draggable="true" (dragstart)="onDragStart($event, dish)">{{dish}}</div>
 </div>
