Add other categories

--- a/src/app/daymenu/daymenu.html
+++ b/src/app/daymenu/daymenu.html
@@ -1,3 +1,4 @@
 <div class="daymenu dishes breakfast" (drop)="dropBreakfast($event)" (dragover)="$event.preventDefault()">
+    <h3>Aamupala</h3>
     <div class="dish" *ngFor="let breakfast of breakfasts">{{breakfast}}</div>
 </div>
