--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,24 @@ body {
     font-weight: bolder;    
     font-size: 20px;
 }
+
+
+*::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px $sushi;
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+*::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: $gossip;
+}
+
+*::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px $sushi;
+	background-color: $lilac;
+}
