--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,3 +35,12 @@ body {
 	-webkit-box-shadow: inset 0 0 6px $sushi;
 	background-color: $lilac;
 }
+
+input[type=button] {
+    color: $lilac;
+    background-color: $sushi;
+    font-weight: bold;
+    padding: 3px;
+    min-width: 100px;
+    font-size: 20px;
+}
