--- a/src/app/shoppinglist/shoppinglist.scss
+++ b/src/app/shoppinglist/shoppinglist.scss
@@ -4,10 +4,6 @@
     float: right;
 }
 
-.closeShoppingList {
-    float: right;
-}
-
 .shoppingList {
     z-index: 200;
     height: 100%;
@@ -40,4 +36,10 @@
     font-size: 10px !important;
     float: right;
     margin-right: 2px;
+}
+
+.printable {
+    background: white !important;
+    color: black;
+    font-weight: normal;
 }
