--- a/src/app/daymenu/daymenu.html
+++ b/src/app/daymenu/daymenu.html
@@ -1,4 +1,19 @@
-<div class="daymenu dishes breakfast" (drop)="dropBreakfast($event)" (dragover)="$event.preventDefault()">
+<div class="daymenu dishes breakfast" (drop)="dropBreakfast($event)" (dragover)="$event.preventDefault()" (dragstart)="$event.preventDefault()" draggable="false">
     <h3>Aamupala</h3>
-    <div class="dish" *ngFor="let breakfast of breakfasts">{{breakfast}}</div>
+    <div class="dish" *ngFor="let breakfast of breakfasts" draggable="false">{{breakfast}}</div>
+</div>
+
+<div class="daymenu dishes lunch" (drop)="dropLunch($event)" (dragover)="$event.preventDefault()" draggable="false">
+    <h3>Lounas</h3>
+    <div class="dish" *ngFor="let lunch of lunches" draggable="false">{{lunch}}</div>
+</div>
+
+<div class="daymenu dishes dinner" (drop)="dropDinner($event)" (dragover)="$event.preventDefault()" draggable="false">
+    <h3>Päivällinen</h3>
+    <div class="dish" *ngFor="let dinner of dinners" draggable="false">{{dinner}}</div>
+</div>
+
+<div class="daymenu dishes snack" (drop)="dropSnack($event)" (dragover)="$event.preventDefault()" draggable="false">
+    <h3>Iltapala</h3>
+    <div class="dish" *ngFor="let snack of snacks" draggable="false">{{snack}}</div>
 </div>
