--- a/src/app/dishes/dishadd.scss
+++ b/src/app/dishes/dishadd.scss
@@ -3,3 +3,34 @@
 .addDishButton {
     float: right;
 }
+
+.addDishModal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    z-index: 200;
+    cursor: pointer;
+}
+
+form {
+    background-color: $gossip;
+    border-radius: 15px;
+    padding: 3px;
+    width: 400px;
+    margin: auto;
+    margin-top: 25px;
+    cursor: default;
+}
+
+form > input,
+form > select {
+    margin-top: 5px;
+}
+
+input:disabled {
+    background-color: $gossip;
+}
