--- a/src/app/dishes/dishes.html
+++ b/src/app/dishes/dishes.html
@@ -8,6 +8,11 @@
     <div class="dish" *ngFor="let dish of meals" draggable="true" (dragstart)="onDragStart($event, dish)">{{dish}}</div>
 </div>
 
+<div class="dishes soups">
+    <h3>Keitot</h3>
+    <div class="dish" *ngFor="let dish of soups" draggable="true" (dragstart)="onDragStart($event, dish)">{{dish}}</div>
+</div>
+
 <div class="dishes desserts">
     <h3>Jälkiruoat</h3>    
     <div class="dish" *ngFor="let dish of desserts" draggable="true" (dragstart)="onDragStart($event, dish)">{{dish}}</div>
