add filter for dishes

--- a/src/app/dishes/dishes.html
+++ b/src/app/dishes/dishes.html
@@ -1,24 +1,24 @@
 <div class="dishes breakfasts">
     <h3>Aamupalat</h3>
-    <div class="dish" *ngFor="let dish of breakfasts" draggable="true" (dragstart)="onDragStart($event, dish)">{{dish}}</div>
+    <div class="dish" *ngFor="let dish of breakfasts | dishfilter: filter" draggable="true" (dragstart)="onDragStart($event, dish)">{{dish}}</div>
 </div>
 
 <div class="dishes meals">
     <h3>Pääruoat</h3>
-    <div class="dish" *ngFor="let dish of meals" draggable="true" (dragstart)="onDragStart($event, dish)">{{dish}}</div>
+    <div class="dish" *ngFor="let dish of meals | dishfilter: filter" draggable="true" (dragstart)="onDragStart($event, dish)">{{dish}}</div>
 </div>
 
 <div class="dishes soups">
     <h3>Keitot</h3>
-    <div class="dish" *ngFor="let dish of soups" draggable="true" (dragstart)="onDragStart($event, dish)">{{dish}}</div>
+    <div class="dish" *ngFor="let dish of soups | dishfilter: filter" draggable="true" (dragstart)="onDragStart($event, dish)">{{dish}}</div>
 </div>
 
 <div class="dishes desserts">
     <h3>Jälkiruoat</h3>    
-    <div class="dish" *ngFor="let dish of desserts" draggable="true" (dragstart)="onDragStart($event, dish)">{{dish}}</div>
+    <div class="dish" *ngFor="let dish of desserts | dishfilter: filter" draggable="true" (dragstart)="onDragStart($event, dish)">{{dish}}</div>
 </div>
 
 <div class="dishes snacks">
     <h3>Välipalat</h3>
-    <div class="dish" *ngFor="let dish of snacks" draggable="true" (dragstart)="onDragStart($event, dish)">{{dish}}</div>
+    <div class="dish" *ngFor="let dish of snacks | dishfilter: filter" draggable="true" (dragstart)="onDragStart($event, dish)">{{dish}}</div>
 </div>
