Improve colors and style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
-<app-dishesfilter></app-dishesfilter>
-<app-shoppinglist></app-shoppinglist>
-<app-dishadd></app-dishadd>
+<nav>
+    <app-dishesfilter></app-dishesfilter>
+    <app-shoppinglist></app-shoppinglist>
+    <app-dishadd></app-dishadd>
+</nav>
 <app-week></app-week>
-<app-dishes></app-dishes>
-<hr />
-<app-daymenu></app-daymenu>
+<div style="text-align:center;">
+    <app-dishes></app-dishes>
+    <hr />
+    <app-daymenu></app-daymenu>
+</div>
