--- a/src/app/daymenu/daymenu.scss
+++ b/src/app/daymenu/daymenu.scss
@@ -4,8 +4,8 @@
     min-height: 400px;
     overflow-y: auto;
     overflow-x: hidden;
-    min-width: 300px;
-    background-color: $gossip;
+    min-width: 400px;
+    background-color: $main2;
     border-radius: 5px;
     display: inline-block;
 }
