--- a/src/app/week/week.html
+++ b/src/app/week/week.html
@@ -1,6 +1,6 @@
 <div class="weekControls">
     <input id="previousWeek" type="button" value="&#8612;" (click)="previousWeek()">
-    <input id="today" type="button" value="TODAY" (click)="today()">
+    <input id="today" type="button" value="Tänään" (click)="today()">
     <input id="nextWeek" type="button" value="&#8614;" (click)="nextWeek()">
 </div>
 
