--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,5 +1,5 @@
-$sushi: #8AA236;	// Main Primary color */
-$gossip: #E1F4A2;
+$main: rgb(250, 255, 250);	// Main Primary color */
+$main2: #E1F4A2;
 
-$carmine: #AA4339;	// Main secondary color */
-$lilac: #FFB2AA;
+$secondary: rgb(160, 60, 60);	// Main secondary color */
+$secondary2: rgb(60, 10, 10);;
