--- a/src/app/dishes/dishadd.scss
+++ b/src/app/dishes/dishadd.scss
@@ -17,7 +17,7 @@
 }
 
 form {
-    background-color: $gossip;
+    background-color: $main2;
     border-radius: 15px;
     padding: 3px;
     width: 400px;
@@ -32,5 +32,5 @@ form > select {
 }
 
 input:disabled {
-    background-color: $gossip;
+    background-color: $main2;
 }
