--- a/src/app/shoppinglist/shoppinglist.html
+++ b/src/app/shoppinglist/shoppinglist.html
@@ -1,8 +1,8 @@
-<input class="shoppingListButton" type="button" value="OSTOSLISTA" (click)="openShoppingList()">
+<input class="shoppingListButton" type="button" value="Ostoslista" (click)="openShoppingList()">
 
 <div *ngIf="opened" class="shoppingList" [class.printable]="usePrintableClass">    
-    <input class="shoppingListButton" type="button" value="SULJE" (click)="closeShoppingList()">
-    <input class="shoppingListButton" type="button" value="TULOSTETTAVA VERSIO" (click)="printableVersion()" *ngIf="!usePrintableClass">
+    <input class="shoppingListButton" type="button" value="Sulje" (click)="closeShoppingList()">
+    <input class="shoppingListButton" type="button" value="Tulostettava versio" (click)="printableVersion()" *ngIf="!usePrintableClass">
     <div class="shoppingItems">
         <div *ngFor="let item of shoppingItems" class="shoppingItem"  [class.printable]="usePrintableClass">
             {{item}} <input class="removeItemButton" type="button" value="X" (click)="removeFromShoppingList(item)" *ngIf="!usePrintableClass">
