--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,24 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 @import './colors';
 
+$background: linear-gradient(to bottom left, $main, $main2);
+
+
 html,
 body {
-    background: linear-gradient(to bottom right, $sushi, $gossip);
+    background: $background;
     height: 100%;
     overflow: hidden;
-    padding-top: 10px
 }
 
 * {
-    color: $lilac;
-    font-weight: bolder;    
-    font-size: 20px;
+    color: $secondary2;
+    font-weight: normal;    
+    font-size: 16px;
 }
 
 
 *::-webkit-scrollbar-track
 {
-    -webkit-box-shadow: inset 0 0 6px $sushi;
+    -webkit-box-shadow: inset 0 0 6px $main;
 	border-radius: 10px;
 	background-color: #F5F5F5;
 }
@@ -26,24 +28,34 @@ body {
 *::-webkit-scrollbar
 {
 	width: 12px;
-	background-color: $gossip;
+	background-color: $main2;
 }
 
 *::-webkit-scrollbar-thumb
 {
 	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px $sushi;
-	background-color: $lilac;
+	-webkit-box-shadow: inset 0 0 6px $main;
+	background-color: $secondary2;
 }
 
 input[type=button],
 input[type=submit],
 input[type=text],
 select {
-    color: $lilac;
-    background-color: $sushi;
-    font-weight: bold;
+    color: $secondary2;
+    background-color: $main;
+    font-weight: bolder;
     padding: 3px;
     min-width: 100px;
-    font-size: 20px;
+    font-size: 15px;
+    border: 1px dotted $main2;    
+}
+
+input[type=button]:hover,
+input[type=submit]:hover {
+    background-color: $main2;
+}
+
+input[type=text] {
+    font-weight: normal;
 }
