--- a/src/app/dishes/dishadd.scss
+++ b/src/app/dishes/dishadd.scss
@@ -14,7 +14,14 @@
     height: 100%;
     z-index: 200;
     cursor: pointer;
+    animation: appear;
+    animation-duration: 0.5s;
 }
+
+@keyframes appear {
+    from { opacity: 0;}
+    to { opacity: 1;}
+  }
 
 form {
     background-color: $main2;
